man: cargo init

--- a/コマンドライン仕様.md
+++ b/コマンドライン仕様.md
@@ -1,6 +1,74 @@
 # HPS コマンドライン仕様
 
+- `&`:　タグシンボル
+- `@`:　通常即値 ex.`@sample:str`,`@125:x10`,`@fc:h`,`@101101:b`
+- `%`: ネットアドレス
+- `#`: メモリアドレス
+- `$`: パス URI
+
+## 設定ファイル
+
+処理手順：init->inc->if,ifn->flag->list->cons
+
+```cfg
+cons &appl: &rust,&dart,&go,&bin;
+cons &mod: &x64,&amd64,%tc2;
+list -single &app;
+list -target &mod;
+list -upu &gnv;
+flag -O
+ifn &dart: flag -nogc;
+init &appl;
+```
+
 ## FunCobal
+
+- cp: alias of compile
+- compile: aot compile
+  - &bin: native binary
+  - &yz yeze-diki
+  - &cs: ches ul
+  - &dart
+  - &js
+  - &go
+  - &rust
+  - &wasm
+  - &scala
+  - &julia
+  - &java
+  - &clang
+- run: jit compile
+- iprun: interpret
+- inter: cui repl
+- hgui: gui repl
+
+### 設定
+
+- -cfg 設定ファイルの在り処
+  - $\<path-for-cfg>
+
+### バイナリ
+
+- -target: ターゲット環境
+  - &x86: intel x86
+  - &x64: intel x86-64
+  - &amd64: amd x86-64
+  - &tc1: TRONCHIP
+  - &tc2: TRON Chip Neo
+- -lib: バイナリライブラリ
+  - &dyn: 動的ライブラリ
+  - &stc: 静的ライブラリ
+- -single: シングルバイナリ
+  - &app
+  - &web
+  - &mid
+
+### 実行環境
+
+- -upu: 使用処理装置
+  - &gnv: nvidia gpu
+- -core: 使用最大コア数
+  　- @\<num>
 
 ### 最適化
 
